# RAG-experiments

./: README.md
rag-with-postgresql/: constants.py  embeddings_plot.html  pyproject.toml  query.py  rag.py  recipes.csv  recipes_with_embeddings.parquet  utils.py
rag-with-postgresql/data_gen_agent/: agent.py
rag-with-postgresql/rag_agent/: agent.py
